@startuml
'https://plantuml.com/class-diagram

class listofList
class toDoList
class item


toDoList <|-- item
listofList <|-- toDoList


class listofList {

 listAt: list[]

addList()
getList()
findListIndex()
}

class toDoList {

listTitle: String
toDo: item[]

addItem()
deleteItem()
getItem()
getAmtItems()
editTitle()

getTitle()

findItemIndex()
}

class item {

complete: bool
name: String
descript: String
date: String

item()

done()
undo()

isDone()
getName()
getDescript()
getDate()

editName()
editDescrpt()
editDate()

}


@enduml